# mmutils

./: .gitignore  .travis.yml  dub.json  file_hashes.json  index.html  meson.build  meson_builds.py  meson_crosscompile_base.ini  meson_crosscompile_wasm.ini  meson_options.txt  sitemap.xml  symbols.js
.circleci/: config.yml
guplot_scripts/: compare.gnuplot  distribution.gnuplot
mmutils/: thread_pool.html
mmutils/thread_pool/: JobData.del.html  JobData.html  JobData.name.html  JobQueue.add.html  JobQueue.addRange.html  JobQueue.empty.html  JobQueue.emptyRaw.html  JobQueue.first.html  JobQueue.html  JobQueue.lock.html  JobQueue.pop.html  JobsGroup.dependantOn.html  JobsGroup.executeOnThreadNum.html  JobsGroup.getDependenciesWaitCount.html  JobsGroup.html  JobsGroup.jobs.html  JobsGroup.name.html  JobsGroup.thPool.html  Semaphore.html  Thread.html  ThreadData.html  ThreadData.threadId.html  ThreadData.threadPool.html  ThreadData.threadStartFunc.html  ThreadPool.FlushLogsDelegaste.html  ThreadPool.addGroup.html  ThreadPool.addGroupAsynchronous.html  ThreadPool.addJob.html  ThreadPool.addJobAsynchronous.html  ThreadPool.addJobsRange.html  ThreadPool.defaultFlushLogs.html  ThreadPool.flushAllLogs.html  ThreadPool.html  ThreadPool.initialize.html  ThreadPool.logsCacheNum.html  ThreadPool.onFlushLogs.html  ThreadPool.registerExternalThread.html  ThreadPool.releaseExternalThreads.html  ThreadPool.setThreadsNum.html  ThreadPool.unregistExternalThread.html  (+9 more)
src/mmutils/: conv.d  hash_map_simd.d  log.d  thread_pool.d  vector.d
test_cpp/: test_hash_map.cpp
